--- a/site/index.html
+++ b/site/index.html
@@ -588,7 +588,7 @@
                 <div class="about-wrapper">
                     <h2>Who We Are</h2>
                     <p class="about-text">
-                        Abacus Data Consulting was founded in 2018 by Daniel Webb with a clear purpose: using data to help people make better decisions. In an increasingly competitive world, we believe data is a powerful tool that, when leveraged properly, leads to unique insights that support smarter, data-driven decision making. Our work spans data analytics, web development, social media marketing, and machine learning—providing comprehensive solutions to help you succeed.
+                        Abacus Data Consulting was founded in 2018 using data to help people make better decisions. In an increasingly competitive world, we believe data is a powerful tool that, when leveraged properly, leads to unique insights that support smarter, data-driven decision making. Our work spans data analytics, web development, social media marketing, and machine learning—providing comprehensive solutions to help you succeed.
                     </p>
                     <a href="#contact" class="btn btn-outline" style="margin-top: 1rem;">Get In Touch</a>
                 </div>
@@ -631,7 +631,6 @@
                     <h4>Contact</h4>
                     <ul>
                         <li><a href="mailto:abacus.data.consulting@gmail.com">abacus.data.consulting@gmail.com</a></li>
-                        <li><a href="#">+1 (859) 420-3184</a></li>
                         <li><a href="#">Lexington, KY</a></li>
                     </ul>
                 </div>
